--- a/SoftwareProcess/src/main/resources/application.properties
+++ b/SoftwareProcess/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://10.4.56.29:3306/db59063
+spring.datasource.username=db59063
+spring.datasource.password=db59063
 server.port=1234
-
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
