--- a/SoftwareProcess/src/main/resources/application.properties
+++ b/SoftwareProcess/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
 server.port=1234
+
+spring.datasource.url=jdbc:mysql://${DB_HOST}}?useSSL=false
+spring.datasource.username=${DB_USER}}
+spring.datasource.password=${DB_PASSWORD}}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
